WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177590
REGRESSION(
r214201
): WebProcess hangs during policy decisions
https://bugs.webkit.org/show_bug.cgi?id=177590
Summary
REGRESSION(r214201): WebProcess hangs during policy decisions
Alex Christensen
Reported
2017-09-27 21:27:20 PDT
REGRESSION(
r214201
): WebProcess hangs during policy decisions
Attachments
Patch
(44.09 KB, patch)
2017-09-27 21:28 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(44.17 KB, patch)
2017-09-27 21:49 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(45.03 KB, patch)
2017-10-02 10:07 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-09-27 21:28:47 PDT
Created
attachment 322064
[details]
Patch
Alex Christensen
Comment 2
2017-09-27 21:49:08 PDT
Created
attachment 322065
[details]
Patch
WebKit Commit Bot
Comment 3
2017-09-29 17:21:38 PDT
Comment on
attachment 322065
[details]
Patch Rejecting
attachment 322065
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'apply-attachment', '--no-update', '--non-interactive', 322065, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ject.pbxproj Hunk #1 FAILED at 227. Hunk #2 FAILED at 1330. Hunk #3 succeeded at 1996 (offset 24 lines). Hunk #4 succeeded at 3318 (offset 33 lines). 2 out of 4 hunks FAILED -- saving rejects to file Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj.rej patching file Tools/TestWebKitAPI/Tests/WebKitCocoa/JavaScriptDuringNavigation.mm Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Andy Estes']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.webkit.org/results/4703526
Alex Christensen
Comment 4
2017-10-02 10:07:46 PDT
Created
attachment 322384
[details]
Patch
Alex Christensen
Comment 5
2017-10-02 10:09:52 PDT
http://trac.webkit.org/r222714
Radar WebKit Bug Importer
Comment 6
2017-10-02 10:10:40 PDT
<
rdar://problem/34769298
>
Saam Barati
Comment 7
2017-10-29 16:16:25 PDT
This looks to be a 12-13% regression on JSBench on Mac.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug