Source/WebKit/WebProcess/WebPage/WebDocumentLoader.cpp
@@ -51,7 +51,7 @@ void WebDocumentLoader::detachFromFrame()
 void WebDocumentLoader::setNavigationID(uint64_t navigationID)
 {
     ASSERT(navigationID);
-    ASSERT(!m_navigationID);
+    ASSERT(!m_navigationID || m_navigationID == navigationID);
 
     m_navigationID = navigationID;
 }
